Fix spacing on visualization save prompt
smartcolumbusos/discovery_ui#26

--- a/src/pages/visualization-view/visualization-view.scss
+++ b/src/pages/visualization-view/visualization-view.scss
@@ -121,15 +121,6 @@ visualization-view {
     z-index: 1000;
   }
 
-  .popover {
-    padding: 1rem;
-    border-radius: 0px;
-
-    box-shadow: 0px 5px 5px -3px $box-shadow-grey, 0px 8px 10px 1px $box-shadow-grey, 0px 3px 14px 2px $box-shadow-grey;
-
-    min-width: 35rem; /* popover does not deal well with this missing */
-  }
-
   .clear-icon {
     position: absolute;
     top: 5px;
